--- a/index.html
+++ b/index.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
+<!-- saved from url=(0020)http://sheng-li.org/ -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Sheng Li's Homepage</title>
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> </head>
+  <link href="./Sheng Li&#39;s Homepage_files/bootstrap.min.css" rel="stylesheet"> </head>
 
 <body>
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Sheng Li's Homepage</a>
+      <a class="navbar-brand" href="http://sheng-li.org/#">Sheng Li's Homepage</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="http://sheng-li.org/#">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="news.html">News</a>
+            <a class="nav-link" href="http://sheng-li.org/news.html">News</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="publications.html">Publications</a>
+            <a class="nav-link" href="http://sheng-li.org/publications.html">Publications</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="group.html">Group</a>
+            <a class="nav-link" href="http://sheng-li.org/group.html">Group</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="teaching.html">Teaching</a>
+            <a class="nav-link" href="http://sheng-li.org/teaching.html">Teaching</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="activities.html">Activities</a>
+            <a class="nav-link" href="http://sheng-li.org/activities.html">Activities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="http://sheng-li.org/about.html">About</a>
           </li>
         </ul>
       </div>
@@ -51,15 +49,15 @@
   <div class="container">
     <div class="row my-2">
       <div class="col-md-3">
-	      <img class="img-fluid d-block my-5" src="Pics/UVA-SDS-V-Logo.png"> </div>
+	      <img class="img-fluid d-block my-5" src="./Sheng Li&#39;s Homepage_files/UVA-SDS-V-Logo.png"> </div>
       <div class="text-center col-lg-6">
 	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
-		<p class="lead w-100 my-3">Associate Professor, <a href="http://datascience.virginia.edu" target="_blank">School of Data Science</a></p>
+		<p class="lead w-100 my-3">Associate Professor, <a href="http://datascience.virginia.edu/" target="_blank">School of Data Science</a></p>
 		<p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
 		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
       <div class="col-md-3">
-        <img class="img-fluid d-block" src="Pics/ShengLi_2022.png"> </div>
+        <img class="img-fluid d-block" src="./Sheng Li&#39;s Homepage_files/ShengLi_2022.png"> </div>
     </div>
   </div>
   <!-- Bootstrap core JavaScript -->
@@ -67,40 +65,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="">
+          <p class="" style="font-size:15px">
             <b>Research Interests</b>: Trustworthy Representation Learning (e.g., Robustness, Fairness, Causality, Transferability); Computer Vision; Interdisciplinary Applications (Bioinformatics, Biomedical Informatics, Public Health, Ecology, Education, etc.)</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-1">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
+			
           <p class="">
-            <span style="color:red;">
-              <b>Openings</b>: I am continuously looking for highly-motivated Ph.D. students to work on machine learning, computer vision and causal inference. Please send me your CV if interested.
+           <span style="color:red;font-size:15px">
+              <b>Openings</b>: I am continuously looking for highly-motivated Ph.D. students to work on AI, ML, CV, and causal inference. Please send me your CV if interested.
             </span>
           </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-1">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <p class="">
-            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Associate Professor of <a href="http://datascience.virginia.edu" target="_blank">Data Science</a> at 
-		  the University of Virginia (UVA). He was an Assistant Professor of Data Science at UVA from 2022 to 2023, an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, 
-		  and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from 
-		  Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. 
-		  He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications 
-		  in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, 
-		  visual intelligence, and causal inference. He has published over 140 papers, and has received over 10 research awards, 
-		  such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award,
-		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning 
-		  Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
+		  
+          <p class="" style="font-size:15px">
+            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Associate Professor of <a href="http://datascience.virginia.edu/" target="_blank">Data Science</a> at 
+		  the University of Virginia (UVA). He was an Assistant Professor of Data Science at UVA from 2022 to 2023, an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, visual intelligence, and causal inference. He has published over 150 papers, and has received over 10 research awards, such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award, and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
         </div>
       </div>
     </div>
@@ -112,7 +88,7 @@
         <div class="col-md-3">
           <p class="lead">
             <span>
-				<b>News</b> [<a href="news.html" target="_blank">more...</a>]
+				<b>News</b> [<a href="http://sheng-li.org/news.html" target="_blank">more...</a>]
             </span>
           </p>
         </div>
@@ -122,9 +98,9 @@
   <div class="py-0">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 w-100">
-          <ul class="">
-		  	<li>10/2023, One paper on semi-supervised single domain generalization is accepted by TMLR.</li>
+        <div class="col-md-13 w-100">
+          <ul class="" style="font-size:15px">
+			<li>10/2023, One paper on semi-supervised single domain generalization is accepted by TMLR.</li>
 		  	<li>09/2023, One paper on fish identification is accepted at AJCAI 2023. More information about our project can be found in this <a href="https://datascience.virginia.edu/news/fish-ial-recognition-software-aims-protect-trout" target="_blank">news article</a>.</li> 
 		  	<li>08/2023, Received an <strong>NSF Grant</strong> to support our research on physics-guided graph neural networks. </li> 
 		  	<li>08/2023, One paper on the calibration of graph neural networks is accepted at ACM CIKM 2023. </li> 
@@ -142,7 +118,7 @@
 		  	<li>01/2023, Three papers on fair graph learning, continual federated learning, and few-shot transfer learning are accepted at <a href="https://iclr.cc/Conferences/2023" target="_blank">ICLR 2023</a>.</li> 
 		  	<li>01/2023, One paper is accepted by Bioinformatics; One paper is accepted by JMIR AI.</li>
 		  	<li>12/2022, Seven papers are accepted at <a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE 2023</a>, <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, Briefings in Bioinformatics, AAAI-23 <a href="https://www.continualcausality.org/" target="_blank">Bridge Program</a>, and <a href="https://icaart.scitevents.org/" target="_blank">ICAART 2023</a>.
-		  	<li>12/2022, I accepted the invitation to serve as Area Chair for <a href="https://icml.cc/Conferences/2023" target="_blank">ICML 2023</a>.</li>
+		  	</li><li>12/2022, I accepted the invitation to serve as Area Chair for <a href="https://icml.cc/Conferences/2023" target="_blank">ICML 2023</a>.</li>
 		  	<li>11/2022, I accepted the invitation to serve as Area Chair for <a href="https://ijcai-23.org/" target="_blank">IJCAI 2023</a>.</li>
 		  	<li>10/2022, One paper on scene graph generation is accepted at <a href="https://wacv2023.thecvf.com/" target="_blank">WACV 2023</a>; Two papers on visual learning are accepted at <a href="https://bigdataieee.org/BigData2022/" target="_blank">IEEE BigData 2022</a>.</li>
 		  	<li>09/2022, I will co-organize a tutorial (<a href="https://aaai23causalinference.github.io/" target="_blank">Machine Learning for Causal Inference</a>) and a workshop (<a href="https://ai4webads2023.github.io/" target="_blank">AI for Web Ads</a>) at <a href="https://aaai.org/Conferences/AAAI-23/" target="_blank">AAAI 2023</a>.</li> 
@@ -152,18 +128,7 @@
 		  	<li>08/2022, I accepted the invitations to serve as Tutorial Co-Chair and Senior PC member for <a href="https://www.siam.org/conferences/cm/conference/sdm23" target="_blank">SDM 2023</a>, and Area Chair for <a href="https://iclr.cc/" target="_blank">ICLR 2023</a>.</li>
 		  	<li>08/2022, Two papers are accepted at <a href="https://www.cikm2022.org/" target="_blank">ACM CIKM 2022</a>; One paper is accepted at <a href="https://sites.google.com/view/mlmi2022/" target="_blank">MICCAI-MLMI 2022</a>.</li>
 		  	<li>07/2022, Received an <strong>NIH U01 Grant</strong> (as Co-I; PI: Prof. Natarajan Kannan) to annotate dark ion-channel functions by language modeling.</li>  
-		  	<li>06/2022, Received an <strong>NIH R01 Supplement Grant</strong> (as Co-I; PI: Prof. Donglan Zhang) to examine disparities in ADRD using machine learning.</li>
-			<li>05/2022, One paper on class-imbalanced domain adaptation is accepted at <a href="https://kdd.org/kdd2022/" target="_blank">KDD 2022</a>.</li>    
-			<li>05/2022, My PhD student Zhongliang Zhou received the Outstanding Graduate Student Award</a> from CS department.</li>  
-			<li>04/2022, One paper on knowledge-infused agricultural language models is accepted at <a href="https://ijcai-22.org/" target="_blank">IJCAI 2022</a> (AI for Good Track).</li>  
-			<li>03/2022, I accepted the invitation to serve as Area Chair for NeurIPS 2022.</li>   
-			<li>03/2022, Received a <strong>Home Depot Gift Grant</strong> (PI) to support our research on deep learning and knowledge graph.</li>  
-			<li>03/2022, Received a <strong>DoD Grant</strong> (PI) through KRI to support our research on visual intelligence.</li>  
-			<li>03/2022, One paper on multi-task adversarial learning and causal inference is accepted at <a href="https://www.chilconference.org/" target="_blank">CHIL 2022</a>.</li>   
-			<li>03/2022, Received an <strong>USGS Grant</strong> (Sole PI) to support our research on individual fish identification.</li>  
-			<li>02/2022, I accepted the invitation to serve as Associate Editor for IEEE Transactions on Neural Networks and Learning Systems (T-NNLS).</li>  
-			<li>02/2022, I received the Best Associate Editor Award from IEEE Transactions on Circuits and Systems for Video Technology.</li>  
-			<li>01/2022, One paper on open-set single domain generalization is accepted at <a href="https://iclr.cc/" target="_blank">ICLR 2022</a>.</li>  
+		  	<li>06/2022, Received an <strong>NIH R01 Supplement Grant</strong> (as Co-I; PI: Prof. Donglan Zhang) to examine disparities in ADRD using machine learning.</li> 
 			
           </ul>
         </div>
@@ -176,7 +141,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
 		<li>Georgia CTSA Team Science Award, 2023</li>
 		<li>Fred C. Davidson Early Career Scholar Award, 2022</li>  
 		<li>Best Associate Editor Award, IEEE TCSVT, 2022</li>
@@ -202,7 +167,7 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <ul class="">
+          <ul class="" style="font-size:15px">
             <li>
               <b>Panelist</b>: NSF (III, OAC, NAIRI, CRII, GRFP), CDC</li>  
             <li>
@@ -226,11 +191,12 @@
         <div class="col-md-12">
           <h2 class="lead"> <strong>Sponsors</strong></h2>
         </div>
-      <span class="col-md-10 mx-2"><img class="img-fluid d-block" src="Pics/grants.png"></span></div> 
+      <span class="col-md-10 mx-2"><img class="img-fluid d-block" src="./Sheng Li&#39;s Homepage_files/grants.png"></span></div> 
     </div>
   </div>
-<script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-</body>
+<script src="./Sheng Li&#39;s Homepage_files/jquery.min.js"></script>
+  <script src="./Sheng Li&#39;s Homepage_files/bootstrap.bundle.min.js"></script>
 
-</html>
+
+
+</body></html>
