--- a/about.html
+++ b/about.html
@@ -47,17 +47,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="">Sheng Li is an Assistant Professor of Data Science at the University of Virginia (UVA). Prior to joining UVA, 
-		  he was an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, and a Data Scientist 
-		  in Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University 
-		  in 2017 under the supervision of Prof. Yun Raymond Fu. He received his Master degree and Bachelor degree from School 
-		  of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively. 
-		  His recent research interests include trustworthy representation learning, graph neural networks, visual intelligence, 
-		  and causal inference. He has published over 120 papers, and has received over 10 research awards, such as the INNS 
-		  Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, 
-		  and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural 
-		  Networks and Learning Systems and IEEE Trans. Circuits and Systems for Video Technology, and has served as an Area Chair 
-		  for NeurIPS and ICLR.</p>
+          <p class="">Sheng Li is an Associate Professor of <a href="http://datascience.virginia.edu/" target="_blank">Data Science</a> at 
+		  the University of Virginia (UVA). He was an Assistant Professor of Data Science at UVA from 2022 to 2023, an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, visual intelligence, and causal inference. He has published over 150 papers, and has received over 10 research awards, such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award, and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
+        
         </div>
       </div>
     </div>
