--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
-			<li>10/2023, One paper on semi-supervised single domain generalization is accepted by TMLR.</li>
+			<li>12/2023, Three papers (Open-Set Graph Learning, Causal Inference, and LLM for Recommendation) and one student abstract (BadSAM) are accepted at AAAI 2024.</li>
+		  	<li>11/2023, I accepted the invitation to serve as Associate Editor of IEEE Trans. Cognitive and Developmental Systems (T-CDS) and as Area Chair for IJCAI 2024 and ICML 2024.</li>
+		  	<li>10/2023, One paper on semi-supervised single domain generalization is accepted by TMLR.</li>
 		  	<li>09/2023, One paper on fish identification is accepted at AJCAI 2023. More information about our project can be found in this <a href="https://datascience.virginia.edu/news/fish-ial-recognition-software-aims-protect-trout" target="_blank">news article</a>.</li> 
 		  	<li>08/2023, Received an <strong>NSF Grant</strong> to support our research on physics-guided graph neural networks. </li> 
 		  	<li>08/2023, One paper on the calibration of graph neural networks is accepted at ACM CIKM 2023. </li> 
@@ -173,7 +175,7 @@
             <li>
               <b>Panelist</b>: NSF (III, OAC, NAIRI, CRII, GRFP), CDC</li>  
             <li>
-              <b>Associate Editor</b>: IEEE Trans. Neural Networks and Learning Systems (2022 - ), IEEE Transactions on Circuits and Systems for Video Technology (2021 - ), IEEE Computational Intelligence Magazine (2019 - ), Neurocomputing (2017 - 2022), Journal of Electronic Imaging (2018 - 2022), IET Image Processing (2017 - 2020)</li>
+              <b>Associate Editor</b>: IEEE Trans. Neural Networks and Learning Systems (2022 - ), IEEE Trans. Cognitive and Developmental Systems (2024 - ), IEEE Transactions on Circuits and Systems for Video Technology (2021 - ), IEEE Computational Intelligence Magazine (2019 - ), Neurocomputing (2017 - 2022), Journal of Electronic Imaging (2018 - 2022), IET Image Processing (2017 - 2020)</li>
 			<li>
 			 <b>Editorial Board Member</b>: Frontiers in Signal Processing (2021 - ), Neural Computing and Applications (2017 - )</li>
             <li><b>Program Chair</b>: <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">CVPR-AMFG</a> (2021), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank">IJCAI-Tusion</a> (2020), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank">IJCAI-Tusion</a> (2019), <a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank">CVPR-AMFG</a> (2019)</li>
@@ -182,7 +184,7 @@
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: ICML (2023), IJCAI (2023), NeurIPS (2022-2023), ICLR (2022-2024), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: ICML (2023-2024), IJCAI (2023-2024), NeurIPS (2022-2023), ICLR (2022-2024), ICPR (2020-2022), VCIP (2017)</li>
             <li>
               <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022), SDM (2023)</li>
             </ul>
