--- a/publications.html
+++ b/publications.html
@@ -54,6 +54,12 @@
           </p>
           <ul class="" style="font-size:15px">
             <li>
+              <b>Sheng Li</b>, Zhixuan Chu:
+              <a href="https://link.springer.com/book/10.1007/978-3-031-35051-1" target="_blank" class="text-secondary">Machine Learning for Causal Inference</a>.
+              <b>
+                <i>Springer</i>
+              </b>, 2017.</li>
+	    <li>
               <b>Sheng Li</b>, Yun Fu:
               <a href="https://www.springer.com/us/book/9783319601755" target="_blank" class="text-secondary">Robust Representations for Data Analytics</a>.
               <b>
@@ -75,13 +81,15 @@
               <i>Low-Rank and Sparse Modeling for Visual Analysis</i>, Springer, 2014.</li>
           </ol>
           <p class="" style="font-size:15px">
-            <b>Journal Papers</b>&nbsp;(<b><i>2 IEEE TPAMI, 6 IEEE TNNLS, 4 IEEE TKDE, 3 IEEE TIP, 3 IEEE TCSVT, 3 ACM TKDD, 1 ACM TOMM, 1 IEEE TETCI, 1 DMKD, 1 Nature Communications, 1 eLife, 1 BMC Bioinformatics, 1 ISJ, 1 NN, and 1 MTA</i></b>)</p>
-		<p class="" style="font-size:15px">	
-        <b>Conference Papers</b>
-        <i>(<b>4 ICLR, 2 NeurIPS, 6 SIGKDD, 11 IJCAI, 6 AAAI, 9 CIKM, 8 SDM, 5 ICDM, 3 SIGIR, 5 IEEE BigData, 2 CVPR, 1 ICCV, 1 ECCV, 1 ICDE, 1 NAACL, 1 RecSys, 1 WSDM, 1 ACM MM, 1 COLING, 20+ IJCNN/FG/ICME/ICMR/MIPR/ICIP/ICPR/ICASSP</b>)</i>
-		</p>
-           
+            <b>Papers</b>
           <ol class="" style="font-size:15px">
+		  	<b>2024</b>
+		  	<li>Yu Wang, Ronghang Zhu, Pengsheng Ji, and <b>Sheng Li</b>. Open-Set Graph Domain Adaptation via Separate Domain Alignment. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
+			<li>Zhixuan Chu, Mengxuan Hu, Qing Cui, Longfei Li, and <b>Sheng Li</b>. Task-Driven Causal Feature Distillation: Towards Trustworthy Risk Prediction. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
+			<li>Yan Wang, Zhixuan Chu, Xin Ouyang, Simeng Wang, Hongyan Hao, Yue Shen, Jinjie Gu, Siqiao Xue, James Zhang, Qing Cui, Longfei Li, Jun Zhou, and <b>Sheng Li</b>. LLMRG: Improving Recommendations through Large Language Model Reasoning Graphs. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
+			<li>Zihan Guan, Mengxuan Hu, Zhongliang Zhou, Jielu Zhang, <b>Sheng Li</b>, and Ninghao Liu. BadSAM: Exploring Security Vulnerabilities of SAM via Backdoor Attacks. (Student Abstract) <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
+		  	<p></p>
+		  
 			<b>2023</b>
 		  	<li>Ronghang Zhu, Xiang Yu, and <b>Sheng Li</b>. Semi-Supervised Single Domain Generalization with Label-Free Adversarial Data Augmentation. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2023.</li>
 		  	<li>Zhongliang Zhou*, Wayland Yeung*, Nathan Gravel, Mariah Salcedo, Saber Soleymani, <b>Sheng Li</b>, and Natarajan Kannan. Phosformer: An explainable Transformer model for protein kinase-specific phosphorylation predictions. <em>Bioinformatics</em>, 2023. (* indicates equal contribution)</li>
@@ -106,6 +114,7 @@
 		  	<li>Weili Shi*, Zhongliang Zhou*, Ben Letcher, Nathaniel Hitt, Yoichiro Kanno, Ryo Futamura, Osamu Kishida, Kentar Morita, and <b>Sheng Li</b>. Aging Contrast: A Contrastive Learning Framework for Fish Re-identification Across Seasons and Years. <i>The 36th Australasian Joint Conference on Artificial Intelligence (<b>AJCAI</b>)</i>, 2023.
 		  	<li>Hemadri Jayalath, Ghadeer Yassin, Lakshmish Ramaswamy, and <b>Sheng Li</b>. Continual Optimization of In-Production Machine Learning Systems through Semantic Analysis of User Feedback. <i>The 15th International Conference on Agents and Artificial Intelligence (<b>ICAART</b>)</i>, 2023.</li>
 		  	<li>Zhongliang Zhou, Wayland Yeung, Saber Soleymani, Nathan Gravel, Mariah Salcedo, <b>Sheng Li</b>, and Natarajan Kannan. Explaining the blackbox - Unraveling Protein Language Model's Learning Mechanisms for Kinase-Specific Phosphorylation Prediction. <em>The ICML Workshop on Computational Biology</em>, 2023.</li>
+		  	<li>Wenxiong Liao, Zhengliang Liu, Yiyang Zhang, Xiaoke Huang, Fei Qi, Siqi Ding, Hui Ren, Zihao Wu, Haixing Dai, <b>Sheng Li</b>, Lingfei Wu, Ninghao Liu, Quanzheng Li, Tianming Liu, Xiang Li, and Hongmin Cai. Coarse-to-fine Knowledge Graph Domain Adaptation based on Distantly-supervised Iterative Training. <i>IEEE International Conference on Bioinformatics and Biomedicine (<b>BIBM</b>)</i>, 2023.</li>
 		  	<p></p>
 			
 		  	<b>2022</b>
