--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <ul class="" style="font-size:15px">
 			<li>12/2023, Three papers (Open-Set Learning, Causal Inference, and LLM for Recommendation) and one student abstract (BadSAM) are accepted at AAAI 2024.</li>
 		  	<li>11/2023, Our new book on <a href="https://link.springer.com/book/10.1007/978-3-031-35051-1" target="_blank">Machine Learning for Causal Inference</a> has been published by Springer. Many thanks to the contributors of this book!</li> 
-		  	<li>11/2023, I accepted the invitation to serve as Associate Editor of IEEE Trans. Cognitive and Developmental Systems (T-CDS) and as Area Chair for IJCAI 2024 and ICML 2024.</li>
+		  	<li>11/2023, I accepted the invitation to serve as Associate Editor of IEEE Trans. Cognitive and Developmental Systems (T-CDS), as Area Chair for IJCAI 2024 and ICML 2024, and as SPC for PAKDD 2024.</li>
 		  	<li>10/2023, One paper on semi-supervised single domain generalization is accepted by TMLR.</li>
 		  	<li>09/2023, One paper on fish identification is accepted at AJCAI 2023. More information about our project can be found in this <a href="https://datascience.virginia.edu/news/fish-ial-recognition-software-aims-protect-trout" target="_blank">news article</a>.</li> 
 		  	<li>08/2023, Received an <strong>NSF Grant</strong> to support our research on physics-guided graph neural networks. </li> 
