--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,7 @@
             <b>Papers</b>
           <ol class="" style="font-size:15px">
 		  	<b>2024</b>
+		  	<li>Zhongliang Zhou*, Wayland Yeung*, Saber Soleymani, Nathan Gravel, Mariah Salcedo, <b>Sheng Li</b>, and Natarajan Kannan. Using explainable machine learning to uncover the kinase-substrate interaction landscape. <em>Bioinformatics</em>, 2024. (* indicates equal contribution)</li>
 		  	<li>Yu Wang, Ronghang Zhu, Pengsheng Ji, and <b>Sheng Li</b>. Open-Set Graph Domain Adaptation via Separate Domain Alignment. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
 			<li>Zhixuan Chu, Mengxuan Hu, Qing Cui, Longfei Li, and <b>Sheng Li</b>. Task-Driven Causal Feature Distillation: Towards Trustworthy Risk Prediction. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
 			<li>Yan Wang, Zhixuan Chu, Xin Ouyang, Simeng Wang, Hongyan Hao, Yue Shen, Jinjie Gu, Siqiao Xue, James Zhang, Qing Cui, Longfei Li, Jun Zhou, and <b>Sheng Li</b>. LLMRG: Improving Recommendations through Large Language Model Reasoning Graphs. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
