--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 	      <img class="img-fluid d-block my-5" src="Pics/UVA-SDS-V-Logo.png"> </div>
       <div class="text-center col-lg-6">
 	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
-		<p class="lead w-100 my-3">Associate Professor, <a href="http://datascience.virginia.edu" target="_blank">School of Data Science</a></p>
-		<p class="">178 Elson, University of Virginia, Charlottesville, VA 22903
+		<p class="lead w-100 my-3">Associate Professor, <a href="http://www.virginia.edu" target="_blank">University of Virginia</a></p>
+		<p class="">178 Elson, 400 Brandon Avenue, Charlottesville, VA 22903
 		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
       <div class="col-md-3">
@@ -77,7 +77,7 @@
           </p>
 		  
           <p class="" style="font-size:15px">
-            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Associate Professor of <a href="http://datascience.virginia.edu/" target="_blank">Data Science</a> at 
+            <b class="text-capitalize">Short Bio</b>: Sheng Li is an Associate Professor of <a href="http://datascience.virginia.edu/" target="_blank">Data Science</a>, and, by courtesy, Computer Science at 
 		  the University of Virginia (UVA). He was an Assistant Professor of Data Science at UVA from 2022 to 2023, an Assistant Professor of Computer Science at the University of Georgia from 2018 to 2022, and a Data Scientist at Adobe Research from 2017 to 2018. He received his PhD degree in Computer Engineering from Northeastern University in 2017 under the supervision of <a href="http://www1.ece.neu.edu/~yunfu/" target="_blank">Prof. Yun Raymond Fu</a>. He received his Master degree and Bachelor degree from School of Computer Science at Nanjing University of Posts and Telecommunications in 2012 and 2010, respectively. His recent research interests include trustworthy representation learning, graph neural networks, visual intelligence, and causal inference. He has published over 150 papers, and has received over 10 research awards, such as the INNS Aharon Katzir Young Investigator Award, Fred C. Davidson Early Career Scholar Award, Adobe Data Science Research Award, Cisco Faculty Research Award, and SDM Best Paper Award. He has served as Associate Editor for seven international journals such as IEEE Trans. Neural Networks and Learning Systems (TNNLS) and IEEE Trans. Circuits and Systems for Video Technology (TCSVT), and has served as an Area Chair for IJCAI, NeurIPS, ICML, and ICLR.</p>
         </div>
       </div>
@@ -102,6 +102,7 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>01/2024, One paper on explainable machine learning is accepted by Bioinformatics.</li>
 			<li>12/2023, Three papers (Open-Set Learning, Causal Inference, and LLM for Recommendation) and one student abstract (BadSAM) are accepted at AAAI 2024; One paper on video anomaly detection is accepted at SDM 2024.</li>
 		  	<li>11/2023, Our new book on <a href="https://link.springer.com/book/10.1007/978-3-031-35051-1" target="_blank">Machine Learning for Causal Inference</a> has been published by Springer. Many thanks to the contributors of this book!</li> 
 		  	<li>11/2023, I accepted the invitation to serve as Associate Editor of IEEE Trans. Cognitive and Developmental Systems (T-CDS), as Area Chair for IJCAI 2024 and ICML 2024, and as SPC for PAKDD 2024.</li>
