--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
           <p class="lead">
             <b>Publications&nbsp;</b>[<a href="http://scholar.google.com/citations?user=DEncVcYAAAAJ&amp;hl=en" target="_blank" class="text-secondary">Google Scholar</a>]</p>
           <p class="">
-            <b>Book</b>
+            <b>Books</b>
           </p>
           <ul class="" style="font-size:15px">
             <li>
@@ -58,7 +58,7 @@
               <a href="https://link.springer.com/book/10.1007/978-3-031-35051-1" target="_blank" class="text-secondary">Machine Learning for Causal Inference</a>.
               <b>
                 <i>Springer</i>
-              </b>, 2017.</li>
+              </b>, 2023.</li>
 	    <li>
               <b>Sheng Li</b>, Yun Fu:
               <a href="https://www.springer.com/us/book/9783319601755" target="_blank" class="text-secondary">Robust Representations for Data Analytics</a>.
