--- a/group.html
+++ b/group.html
@@ -56,7 +56,6 @@
         <div class="col-md-12">
           <ul class="">
 		<li><b>Ronghang Zhu</b>, Fall 2019 - </li>  
-		<li><b>Zhongliang Zhou</b> (Co-advised with Dr. Natarajan Kannan), Spring 2020 - </li>
 		<li><b>Daiqing Qi</b>, Fall 2021 - </li> 
 		<li><b>Weili Shi</b>, Fall 2021 - </li> 
 		<li><b>Zhanwen Chen</b>, Fall 2021 - </li> 
@@ -102,9 +101,10 @@
         <div class="col-md-12">
           <ul class="">
 			<b>PhD Students</b>
-			<li><b>Zhixuan Chu</b> (Biostatistics, Co-advised with Dr. Stephen Rathbun), Spring 2019 - Spring 2021. First employment: Ant Financial.</li>  
-			<li><b>Seyedsaed Rezayidemne</b>, Fall 2018 - Spring 2023.</li>
-		  	<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - Spring 2023. First employment: LinkedIn.</li>
+			<li><b>Zhixuan Chu</b> (Biostatistics, Co-advised with Dr. Stephen Rathbun), Spring 2019 - Spring 2021. First employment: Algorithm Expert at Ant Group.</li>  
+			<li><b>Seyedsaed Rezayidemne</b>, Fall 2018 - Spring 2023. First employment: NLP Scientist at NBME.</li>
+		  	<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - Spring 2023. First employment: Machine Learning Engineer at LinkedIn.</li>
+		  	<li><b>Zhongliang Zhou</b> (Co-advised with Dr. Natarajan Kannan), Spring 2020 - Spring 2024. First employment: Senior Scientist at Merck.</li>
 		  	<p></p>
 			<b>MS Students</b>
 		  	<li><b>Zhaiming Shen</b> (PhD Student in Mathematics), Spring 2022 - Summer 2023</li>
