--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	      <img class="img-fluid d-block my-5" src="Pics/UVA-SDS-V-Logo.png"> </div>
       <div class="text-center col-lg-6">
 	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
-		<p class="lead w-100 my-3">Quantitative Foundation Associate Professor, <a href="http://www.virginia.edu" target="_blank">University of Virginia</a></p>
+		<p class="lead w-100 my-3">Quantitative Foundation Associate Professor<br><a href="http://www.virginia.edu" target="_blank">University of Virginia</a></p>
 		<p class="">178 Elson, 400 Brandon Avenue, Charlottesville, VA 22903
 		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
