--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		        <li>02/2024, I'm appointed as a Quantitative Foundation Associate Professor of Data Science at UVA.</li>
 		  	<li>01/2024, One paper on explainable machine learning is accepted by Bioinformatics.</li>
 			<li>12/2023, Three papers (Open-Set Learning, Causal Inference, and LLM for Recommendation) and one student abstract (BadSAM) are accepted at AAAI 2024; One paper on video anomaly detection is accepted at SDM 2024.</li>
 		  	<li>11/2023, Our new book on <a href="https://link.springer.com/book/10.1007/978-3-031-35051-1" target="_blank">Machine Learning for Causal Inference</a> has been published by Springer. Many thanks to the contributors of this book!</li> 
