--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>03/2024, One survey paper on trustworthy representation learning across domains is accepted by ACM TKDD.</li>
 		        <li>02/2024, I'm appointed as a Quantitative Foundation Associate Professor of Data Science at UVA.</li>
 		  	<li>01/2024, One paper on explainable machine learning is accepted by Bioinformatics.</li>
 			<li>12/2023, Three papers (Open-Set Learning, Causal Inference, and LLM for Recommendation) and one student abstract (BadSAM) are accepted at AAAI 2024; One paper on video anomaly detection is accepted at SDM 2024.</li>
