--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,7 @@
 			<li>Yan Wang, Zhixuan Chu, Xin Ouyang, Simeng Wang, Hongyan Hao, Yue Shen, Jinjie Gu, Siqiao Xue, James Zhang, Qing Cui, Longfei Li, Jun Zhou, and <b>Sheng Li</b>. LLMRG: Improving Recommendations through Large Language Model Reasoning Graphs. <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
 			<li>Zihan Guan, Mengxuan Hu, Zhongliang Zhou, Jielu Zhang, <b>Sheng Li</b>, and Ninghao Liu. BadSAM: Exploring Security Vulnerabilities of SAM via Backdoor Attacks. (Student Abstract) <i>The 38th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2024.</li>
 		  	<li>Dongliang Guo, Yun Fu, and <b>Sheng Li</b>. Ada-VAD: Domain Adaptable Video Anomaly Detection. <i>SIAM International Conference on Data Mining (<b>SDM</b>)</i>, 2024.</li>
-		  	<li>Zhongliang Zhou, Jielu Zhang, Zihan Guan, Mengxuan Hu, Ni Lao, Lan Mu, <b>Sheng Li</b>, and Gengchen Mai. Img2Loc: revisiting image localization using multi-modality foundation models and Image-based Retrieval-Augmented Generation. (Demo Paper) <i>The 47th International ACM SIGIR Conference on Research and Development in Information Retrieval (<b>SIGIR</b>)</i></li>
+		  	<li>Zhongliang Zhou, Jielu Zhang, Zihan Guan, Mengxuan Hu, Ni Lao, Lan Mu, <b>Sheng Li</b>, and Gengchen Mai. Img2Loc: revisiting image localization using multi-modality foundation models and Image-based Retrieval-Augmented Generation. (Demo Paper) <i>The 47th International ACM SIGIR Conference on Research and Development in Information Retrieval (<b>SIGIR</b>)</i>, 2024.</li>
 		  	<p></p>
 		  
 			<b>2023</b>
