--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>05/2024, My student Zhongliang Zhou received the Best PhD Dissertation Award from UGA School of Computing. Zhongliang has recently joined Merck as a Senior Scientist.</li> 
+		  	<li>05/2024, One paper on class-incremental graph learning is accepted by <a href="https://openreview.net/forum?id=ScAc73Y1oJ" target="_blank">TMLR</a>.</li>
+		  	<li>04/2024, I'm invited to write a preview paper on deep learning for causal inference for the <a href="https://www.cell.com/patterns/home" target="_blank">Patterns</a> journal.</li> 
 		  	<li>03/2024, One survey paper on trustworthy representation learning across domains is accepted by ACM TKDD; One demo paper is accepted at SIGIR 2024.</li>
 		        <li>02/2024, I'm appointed as a Quantitative Foundation Associate Professor of Data Science at UVA.</li>
 		  	<li>01/2024, One paper on explainable machine learning is accepted by Bioinformatics.</li>
