--- a/publications.html
+++ b/publications.html
@@ -84,6 +84,7 @@
             <b>Papers</b>
           <ol class="" style="font-size:15px">
 		  	<b>2024</b>
+		  	<li><b>Sheng Li</b>. Large Pretrained Models for Treatment Effect Estimation: Are We There Yet? <i>Patterns</i>, 2024.</li> 
 		  	<li>Daiqing Qi, Handong Zhao, Xiaowei Jia, and <b>Sheng Li</b>. Revealing an Overlooked Challenge in Class-Incremental Graph Learning. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2024.</li>
 		  	<li>Ronghang Zhu, Dongliang Guo, Daiqing Qi, Zhixuan Chu, Xiang Yu, and <b>Sheng Li</b>. Trustworthy Representation Learning Across Domains. <i>ACM Trans. Knowledge Discovery from Data (<b>T-KDD</b>)</i>, 2024.</li>
 		  	<li>Zhongliang Zhou*, Wayland Yeung*, Saber Soleymani, Nathan Gravel, Mariah Salcedo, <b>Sheng Li</b>, and Natarajan Kannan. Using explainable machine learning to uncover the kinase-substrate interaction landscape. <em>Bioinformatics</em>, 2024. (* indicates equal contribution)</li>
