--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>05/2024, One paper on dual-windowed vision transformer with angular self-attention is accepted by TMLR.</li>
+		  	<li>05/2024, Received an <strong>NSF I-Corps Grant</strong> to explore generative AI for educational assessment.</li>
 		  	<li>05/2024, My student Zhongliang Zhou received the Best PhD Dissertation Award from UGA School of Computing. Zhongliang has recently joined Merck as a Senior Scientist.</li> 
 		  	<li>05/2024, One paper on class-incremental graph learning is accepted by <a href="https://openreview.net/forum?id=ScAc73Y1oJ" target="_blank">TMLR</a>.</li>
 		  	<li>04/2024, I'm invited to write a preview paper on deep learning for causal inference for the <a href="https://www.cell.com/patterns/home" target="_blank">Patterns</a> journal.</li> 
@@ -191,7 +193,7 @@
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: ICML (2023-2024), IJCAI (2023-2024), NeurIPS (2022-2023), ICLR (2022-2024), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: ICML (2023-2024), IJCAI (2023-2024), NeurIPS (2022-2024), ICLR (2022-2024), ICPR (2020-2022), VCIP (2017)</li>
             <li>
               <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022), SDM (2023)</li>
             </ul>
