--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="text-center col-lg-6">
 	      	<h2 contenteditable="false" class="my-4">Sheng Li</h2>
 		<p class="lead w-100 my-3">Quantitative Foundation Associate Professor<br><a href="http://www.virginia.edu" target="_blank">University of Virginia</a></p>
-		<p class="">178 Elson, 400 Brandon Avenue, Charlottesville, VA 22903
+		<p class="">Room 438, 1919 Ivy Road, Charlottesville, VA 22903
 		<br>Email: shengli [AT] virginia.edu</p>
 	</div>
       <div class="col-md-3">
