--- a/group.html
+++ b/group.html
@@ -101,7 +101,7 @@
         <div class="col-md-12">
           <ul class="">
 			<b>PhD Students</b>
-			<li><b>Zhixuan Chu</b> (Biostatistics, Co-advised with Dr. Stephen Rathbun), Spring 2019 - Spring 2021. First employment: Algorithm Expert at Ant Group.</li>  
+			<li><b>Zhixuan Chu</b> (Biostatistics, Co-advised with Dr. Stephen Rathbun), Spring 2019 - Spring 2021. Current Position: Associate Professor, Zhejiang University, China; First employment: Algorithm Expert at Ant Group.</li>  
 			<li><b>Seyedsaed Rezayidemne</b>, Fall 2018 - Spring 2023. First employment: NLP Scientist at NBME.</li>
 		  	<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - Spring 2023. First employment: Machine Learning Engineer at LinkedIn.</li>
 		  	<li><b>Zhongliang Zhou</b> (Co-advised with Dr. Natarajan Kannan), Spring 2020 - Spring 2024. First employment: Senior Scientist at Merck.</li>
