--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>06/2024, One paper on large language models for food applications is accepted by IEEE Transactions on Big Data.</li>
 		  	<li>05/2024, One paper on dual-windowed vision transformer with angular self-attention is accepted by TMLR.</li>
 		  	<li>05/2024, Received an <strong>NSF I-Corps Grant</strong> to explore generative AI for educational assessment.</li>
 		  	<li>05/2024, My student Zhongliang Zhou received the Best PhD Dissertation Award from UGA School of Computing. Zhongliang has recently joined Merck as a Senior Scientist.</li> 
