--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row">
         <div class="col-md-12">
           <p class="" style="font-size:15px">
-            <b>Research Interests</b>: Trustworthy Representation Learning (e.g., Robustness, Fairness, Causality, Transferability); Computer Vision; Interdisciplinary Applications (Bioinformatics, Biomedical Informatics, Public Health, Ecology, Education, etc.)</p>
+            <b>Research Interests</b>: Trustworthy Representation Learning (e.g., Robustness, Fairness, Causality, Transferability); Computer Vision; Interdisciplinary Applications (Educational Measurement, Biomedical Informatics, Public Health, etc.)</p>
 			
           <p class="">
            <span style="color:red;font-size:15px">
@@ -102,6 +102,7 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>06/2024, One paper on class-imbalanced domain adaptation has been accepted by IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT).</li>
 		  	<li>06/2024, One paper on large language models for food applications is accepted by IEEE Transactions on Big Data.</li>
 		  	<li>05/2024, One paper on dual-windowed vision transformer with angular self-attention is accepted by TMLR.</li>
 		  	<li>05/2024, Received an <strong>NSF I-Corps Grant</strong> to explore generative AI for educational assessment.</li>
