--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>07/2024, Received an <strong>NSF Grant</strong> to support our research on AI for controlled-environment agriculture.</li>
 		  	<li>07/2024, One paper on text-guided augmentation for domain generalization is accepted at ECCV 2024.</li>
 		  	<li>06/2024, One paper on class-imbalanced domain adaptation has been accepted by IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT).</li>
 		  	<li>06/2024, One paper on large language models for food applications is accepted by IEEE Transactions on Big Data.</li>
