--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>08/2024, We are organizing the <a href="https://neurips2024edu.github.io/" target="_blank">First Workshop on Large Foundation Models for Educational Assessment</a> at NeurIPS 2024.
+		  	<li>08/2024, One paper on mixup virtual adversarial training for robust vision transformers is accepted at IEEE Transactions on Big Data.</li>
 		  	<li>07/2024, Received an <strong>NSF Grant</strong> to support our research on AI for controlled-environment agriculture.</li>
 		  	<li>07/2024, One paper on text-guided augmentation for domain generalization is accepted at ECCV 2024.</li>
 		  	<li>06/2024, One paper on class-imbalanced domain adaptation has been accepted by IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT).</li>
