--- a/teaching.html
+++ b/teaching.html
@@ -52,6 +52,16 @@
           </p>
       </div>
 	</div>
+	  <div class="row">
+          <div class="col-md-12">
+            <li>Fall 2024, DS 6200 Computation I: Fundamentals </li>
+	  </div>
+      	  </div>
+	  <div class="row">
+          <div class="col-md-12">
+            <li>Spring 2024, DS 6050 Deep Learning </li>
+	  </div>
+     	  </div>
   	  <div class="row">
           <div class="col-md-12">
             <li>Fall 2023, DS 6200 Computation I: Fundamentals </li>
