--- a/group.html
+++ b/group.html
@@ -58,10 +58,11 @@
 		<li><b>Ronghang Zhu</b>, Fall 2019 - </li>  
 		<li><b>Daiqing Qi</b>, Fall 2021 - </li> 
 		<li><b>Weili Shi</b>, Fall 2021 - </li> 
-		<li><b>Zhanwen Chen</b>, Fall 2021 - </li> 
 		<li><b>Dongliang Guo</b>, Fall 2021 - </li>
 		<li><b>Mengxuan Hu</b>, Fall 2022 - </li>
 		<li><b>Guangya Wan</b>, Fall 2023 - </li>
+		<li><b>Eric Nartey Onyame</b>, Spring 2024 - </li>
+		<li><b>Lehan Yang</b>, Fall 2024 - </li>
           </ul>
         </div>
       </div>
@@ -105,6 +106,7 @@
 			<li><b>Seyedsaed Rezayidemne</b>, Fall 2018 - Spring 2023. First employment: NLP Scientist at NBME.</li>
 		  	<li><b>Yu Wang</b> (Statistics, Co-advised with Dr. Pengsheng Ji), Spring 2021 - Spring 2023. First employment: Machine Learning Engineer at LinkedIn.</li>
 		  	<li><b>Zhongliang Zhou</b> (Co-advised with Dr. Natarajan Kannan), Spring 2020 - Spring 2024. First employment: Senior Scientist at Merck.</li>
+		  	<li><b>Zhanwen Chen</b>, Fall 2021 - Spring 2024. </li> 
 		  	<p></p>
 			<b>MS Students</b>
 		  	<li><b>Zhaiming Shen</b> (PhD Student in Mathematics), Spring 2022 - Summer 2023</li>
