--- a/publications.html
+++ b/publications.html
@@ -104,6 +104,7 @@
 		  	<li>Yaochen Zhu, Yinhan He, Jing Ma, Mengxuan Hu, <b>Sheng Li</b>, and Jundong Li. Causal Inference with Latent Variables: Recent Advances and Future Prospectives. <i>ACM SIGKDD Conference on Knowledge Discovery and Data Mining (<b>KDD</b>)</i>, 2024. (Tutorial Track & Survey Paper).</li>
 		  	<li>Dongliang Guo, Yun Fu, and <b>Sheng Li</b>. Ada-VAD: Domain Adaptable Video Anomaly Detection. <i>SIAM International Conference on Data Mining (<b>SDM</b>)</i>, 2024.</li>
 		  	<li>Zhongliang Zhou, Jielu Zhang, Zihan Guan, Mengxuan Hu, Ni Lao, Lan Mu, <b>Sheng Li</b>, and Gengchen Mai. Img2Loc: revisiting image localization using multi-modality foundation models and Image-based Retrieval-Augmented Generation. (Demo Paper) <i>The 47th International ACM SIGIR Conference on Research and Development in Information Retrieval (<b>SIGIR</b>)</i>, 2024.</li>
+		  	<li>Jielu Zhang, Zhongliang Zhou, Gengchen Mai, Mengxuan Hu, Zihan Guan, <b>Sheng Li</b>, and Lan Mu. Text2Seg: Zero-shot Remote Sensing Image Semantic Segmentation via Text-Guided Visual Foundation Models. <i>The 7th ACM SIGSPATIAL International Workshop on AI for Geographic Knowledge Discovery (<b>GeoAI</b>)</i>, 2024.</li>
 		  	<p></p>
 		  
 			<b>2023</b>
