--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: ICML (2023-2024), IJCAI (2023-2024), NeurIPS (2022-2024), ICLR (2022-2025), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: ICML (2023-2024), IJCAI (2023-2025), NeurIPS (2022-2024), ICLR (2022-2025), ICPR (2020-2022), VCIP (2017)</li>
             <li>
-              <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2022), SDM (2023)</li>
+              <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2025), SDM (2023-2025)</li>
             </ul>
         </div>
 	</div>
@@ -216,7 +216,7 @@
         <div class="col-md-12">
           <h2 class="lead"> <strong>Sponsors</strong></h2>
         </div>
-      <span class="col-md-10 mx-2"><img class="img-fluid d-block" src="Pics/grants.png"></span></div> 
+      <span class="col-md-10 mx-2"><img class="img-fluid d-block" src="Pics/Grants_2024.11.png"></span></div> 
     </div>
   </div>
 <script src="vendor/jquery/jquery.min.js"></script>
