--- a/activities.html
+++ b/activities.html
@@ -83,13 +83,16 @@
             <b>Associate Editor /&nbsp;Editorial Board </b>
           </p>
           <ul class="" style="font-size:15px">
+		  	<li>Transactions on Machine Learning Research (2024 - )</li>
 			<li>IEEE Transactions on Neural Networks and Learning Systems (2022 - )</li>  
+		  	<li>IEEE Transactions on Cognitive and Developmental Systems (2024 - )</li>
+		  	<li>IEEE Transactions on Consumer Electronics (2024 - )</li>
 			<li>IEEE Transactions on Circuits and Systems for Video Technology (2021 - )</li>
 			<li>IEEE Computational Intelligence Magazine (2019 - )</li>
-			<li>Journal of Electronic Imaging (2018 - )</li>
-            <li>Neurocomputing (2017 - )</li>
+			<li>Journal of Electronic Imaging (2018 -2022)</li>
+            <li>Neurocomputing (2017 - 2022)</li>
             <li>IET Image Processing (2017 - 2020)</li>
-            <li>Neural Computing and Applications (2017 - )</li>
+            <li>Neural Computing and Applications (2017 - 2023)</li>
           </ul>
         </div>
       </div>
@@ -141,12 +144,12 @@
       <div class="row">
         <div class="col-md-12">
           <ul class="" style="font-size:15px">
-			<li>NeurIPS 2022-2023</li>  
-		  	<li>ICML 2023</li>
-			<li>ICLR 2022-2024</li>
-			<li><a href="https://ijcai20.org/" target="_blank" class="text-secondary">IJCAI 2020-2023</a></li>
+			<li>NeurIPS 2022-2024</li>  
+		  	<li>ICML 2023-2024</li>
+			<li>ICLR 2022-2025</li>
+			<li><a href="https://ijcai20.org/" target="_blank" class="text-secondary">IJCAI 2020-2025</a></li>
             <li>
-              <a href="https://aaai.org/Conferences/AAAI-19/" target="_blank" class="text-secondary">AAAI 2019-2022</a>
+              <a href="https://aaai.org/Conferences/AAAI-19/" target="_blank" class="text-secondary">AAAI 2019-2025</a>
             </li>
             <li>
               <a href="http://www.vcip2017.org/" target="_blank" class="text-secondary">VCIP 2017</a>
