--- a/group.html
+++ b/group.html
@@ -62,7 +62,9 @@
 		<li><b>Mengxuan Hu</b>, Fall 2022 - </li>
 		<li><b>Guangya Wan</b>, Fall 2023 - </li>
 		<li><b>Eric Nartey Onyame</b>, Spring 2024 - </li>
+		<li><b>Hanzhang Yuan</b>, Fall 2024 - </li>
 		<li><b>Lehan Yang</b>, Fall 2024 - </li>
+		<li><b>Ethan Wang</b>, Fall 2024 - </li>
           </ul>
         </div>
       </div>
