--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <p class="">
            <span style="color:red;font-size:15px">
               <b>Openings</b>: I am continuously looking for highly-motivated Ph.D. students to work on AI, ML, CV, and causal inference. Please send me your CV if interested.
+		   Due to a large volume of inquiries, I may not have a chance to reply to every email.
             </span>
           </p>
 		  
