--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
       <div class="row">
         <div class="col-md-13 w-100">
           <ul class="" style="font-size:15px">
+		  	<li>12/2024, One proposal on trustworthy AI and educational assessment is accepted at the AAAI 2025 <a href="https://aaai.org/conference/aaai/aaai-25/senior-member-presentation-track-call-for-proposals/ target="_blank">Senior Member Presentation Track</a>.</li>
+		  	<li>12/2024, One paper on black-box backdoor detection with causal inference is accepted by TMLR.</li>
+		  	<li>11/2024, I am invited to give a talk at the AAAI 2025 Bridge Program on <a href="https://www.continualcausality.org/ target="_blank">Continual Causality</a>.</li>
 		  	<li>11/2024, Received a <strong>DOD DURIP Grant</strong> to support our research projects.</li>
 		  	<li>11/2024, I accepted the invitations to serve as Action Editor for the Transactions on Machine Learning Research (TMLR) and Area Chair for IJCAI 2025.</li>
 		  	<li>11/2024, One paper on individual-level continuous treatment effect estimation is accepted by TMLR.</li>
@@ -201,13 +204,13 @@
               <b>Associate Editor</b>: Transactions on Machine Learning Research (2024 - ), IEEE Trans. Neural Networks and Learning Systems (2022 - ), IEEE Trans. Cognitive and Developmental Systems (2024 - ), IEEE Trans. on Circuits and Systems for Video Technology (2021 - ), IEEE Trans. Consumer Electronics (2024 - ), IEEE Computational Intelligence Magazine (2019 - ), Neurocomputing (2017 - 2022), Journal of Electronic Imaging (2018 - 2022), IET Image Processing (2017 - 2020)</li>
 			<li>
 			 <b>Editorial Board Member</b>: Frontiers in Signal Processing (2021 - 2023), Neural Computing and Applications (2017 - 2023)</li>
-            <li><b>Program Chair</b>: <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">CVPR-AMFG</a> (2021), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank">IJCAI-Tusion</a> (2020), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank">IJCAI-Tusion</a> (2019), <a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank">CVPR-AMFG</a> (2019)</li>
+            <li><b>Program Chair</b>: <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">NeurIPS-FM-EduAssess</a> (2024), <a href="https://web.northeastern.edu/smilelab/amfg2021/" target="_blank">CVPR-AMFG</a> (2021), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2020.html" target="_blank">IJCAI-Tusion</a> (2020), <a href="http://cobweb.cs.uga.edu/~shengli/Tusion2019.html" target="_blank">IJCAI-Tusion</a> (2019), <a href="https://web.northeastern.edu/smilelab/amfg2019/" target="_blank">CVPR-AMFG</a> (2019)</li>
             <li>
               <b>Tutorial Co-Chair</b>: SDM (2023)</li>
 	    <li>
               <b>Publicity Chair</b>: ICMLA (2016), TCMFTL (2016), AMFG (2015-2017)</li>
             <li>
-              <b>Area Chair</b>: ICML (2023-2024), IJCAI (2023-2025), NeurIPS (2022-2024), ICLR (2022-2025), ICPR (2020-2022), VCIP (2017)</li>
+              <b>Area Chair</b>: ICML (2023-2025), IJCAI (2023-2025), NeurIPS (2022-2024), ICLR (2022-2025), ICPR (2020-2022), VCIP (2017)</li>
             <li>
               <b>SPC Member</b>: IJCAI (2020-2021), AAAI (2019-2025), SDM (2023-2025)</li>
             </ul>
