--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,11 @@
           <p class="" style="font-size:15px">
             <b>Papers</b>
           <ol class="" style="font-size:15px">
+		  	<b>2025</b>
+		  	<li>Mengxuan Hu, Zihan Guan, Junfeng Guo, Zhongliang Zhou, Jielu Zhang, and <b>Sheng Li</b>. BBCaL: Black-box Backdoor Detection under the Causality Lens. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2025. (<b>Featured Certification</b>)</li>
+		  	<li><b>Sheng Li</b>. Trustworthy AI Meets Educational Assessment: Challenges and Opportunities. <i>The 39th Annual AAAI Conference on Artificial Intelligence (<b>AAAI</b>)</i>, 2025. (Senior Member Track)</li>
+			<p></p>
+		  	
 		  	<b>2024</b>
 		  	<li><b>Sheng Li</b>. Large Pretrained Models for Treatment Effect Estimation: Are We There Yet? <i><b>Patterns</b></i>, 2024. (Invited Paper)</li> 
 		  	<li>Weili Shi and <b>Sheng Li</b>. Dual-windowed Vision Transformer with Angular Self-Attention. <i>Transactions on Machine Learning Research (<b>TMLR</b>)</i>, 2024.</li>
